--- a/index.html
+++ b/index.html
@@ -3,61 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Красный Октябрь</title>
-    <link rel="stylesheet" href="https://github.com/vitallusik/site/blob/main/style.css">
+    <title>ХК Красный Октябрь</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <!-- Шапка сайта -->
-    <header>
-        <div class="logo">
-            <img src="https://avatars.mds.yandex.net/i?id=d1543583d2358680b326a4263e2be6c5e7e05bab-7679814-images-thumbs&n=13" alt="Логотип клуба">
+    <header class="header">
+        <div class="overlay">
+          <h1 class="header-title">Красный Октябрь</h1>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#main">Главная</a></li>
-                <li><a href="#team">Состав</a></li>
-                <li><a href="#news">Новости</a></li>
-                <li><a href="#history">История</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Баннер -->
-    <section class="banner">
-        <img src="https://avatars.mds.yandex.net/i?id=9a9ee7cfb9f95c90de3a3d142d03637541e3fad4-10385077-images-thumbs&n=13" alt="Баннер">
+      </header>
+    <section class="content">
+        <div class="card">
+            <img
+          class="card-image"
+          src="https://sun9-63.userapi.com/impg/I1wv1ghuwDrY7-7AMJ6XvWMmukdgRGP8mszFOA/YYjS1qAXM68.jpg?size=2560x1567&quality=95&sign=7f6aa8436709c759a40f14b719f009a5&type=album"
+          alt="Команда, которая может всё!"
+        />
+        <h3 class="card-title">2008-2009</h3>
+        <p class="card-text">
+          Трёхкратные обладатели кубка города!
+        </p>
+        </div>
+        <div class="card no-right-margin">
+            <img
+              class="card-image"
+              src="https://sun9-16.userapi.com/impg/SVESJ7Sn0AiHQetumQSVBcea5pEZI2AzmBSKXw/GNZM3K2k944.jpg?size=1280x960&quality=95&sign=79a68e5c4bc20a94f3d72319b728b0ec&type=album"
+              alt="Норм пацыки)))"
+            />
+            <h3 class="card-title">2010-2011</h3>
+            <p class="card-text">
+              Ребята, которые неплохо смотрятся на площадке!
+            </p>
+          </div>
+          <div class="card">
+            <img
+              class="card-image"
+              src="https://sun9-48.userapi.com/impg/N0sv48H7cytxeCl-geznR0TyKUA_itVCcrMhhw/0uPDBc_-KbQ.jpg?size=1280x720&quality=95&sign=901418f44b0dc95f2a3e4d9b1ca77bd9&type=album"
+            />
+            <h3 class="card-title">2012-2013</h3>
+            <p class="card-text">
+              ХЗ. Какие-то челы
+            </p>
+          </div>
+          <div class="card no-right-margin">
+            <img
+              class="card-image"
+              src="https://sun9-47.userapi.com/impg/LqQJEnNFf-3MgM7NStmiF0hQ5z-AOXYpt_wF2Q/xSADFY6Y-gU.jpg?size=957x1080&quality=95&sign=c8474fc14538001eff58d4d465e724d6&type=album"
+            />
+            <h3 class="card-title">2014-2015</h3>
+            <p class="card-text">
+              Ебаные пиздюки
+            </p>
+          </div>
+          <div class="card no-right-margin">
+            <img
+              class="card-image"
+              src="https://sun9-29.userapi.com/impg/U6mvW0inU1kO0zoU-JeDwtt1nyIs2bXLobw8Mg/Wm7Gn91B5UM.jpg?size=2500x1667&quality=95&sign=1c32f7e067506f1ab6da5086de78e1c9&type=album"
+            />
+            <h3 class="card-title">Мужики</h3>
+            <p class="card-text">
+              Продеятели Мохова
+            </p>
+          </div>
     </section>
-
-    <!-- Основной контент -->
-    <main>
-        <!-- Раздел "Состав команды" -->
-        <section id="team">
-            <h2>Состав команды</h2>
-            <div class="team-grid" id="team-grid">
-                <!-- Игроки будут добавлены через JavaScript -->
-            </div>
-        </section>
-
-        <!-- Раздел "Новости" -->
-        <section id="news">
-            <h2>Новости</h2>
-            <div class="news-grid" id="news-grid">
-                <!-- Новости будут добавлены через JavaScript -->
-            </div>
-        </section>
-
-        <section id="hystory">
-            <h2>История</h2>
-            <div class="hystory-grid" id="hystory-grid">
-                <!-- Новости будут добавлены через JavaScript -->
-            </div>
-        </section>
-    </main>
-
-    <!-- Подвал -->
-    <footer>
-        <p>&copy; 2025 Хоккейный клуб. Все права защищены. Мне пох</p>
-    </footer>
-
-    <script src="main.js"></script>
+    <footer class="footer">
+        <h4 class="footer-author">Создатель: Виталий Шлёнский</h4>
+      </footer>
 </body>
 </html>
